# ERT_SRTEAM4_Avionics

./: .gitignore  CMakeLists.txt  README.md
components/QMC5883LArduino/: CMakeLists.txt  QMC5883LCompass.cpp  QMC5883LCompass.h
components/bmp280/: CMakeLists.txt  bmp280.c
components/qmc5883l/: qmc5883l.c  qmc5883l.h
main/: CMakeLists.txt  main.cpp
main/ESP_NOW/: esp_now_configuration.h  esp_now_superclass.cpp  esp_now_superclass.h  ground_station.cpp  ground_station.h  master_avionics.cpp  master_avionics.h
main/filters/: Madgwick.cpp  Madgwick.h  MadgwickAHRS.cpp  MadgwickAHRS.h
main/sensors/: BMP280.cpp  BMP280.h  HMC5883L.cpp  HMC5883L.h  MPU6050.cpp  MPU6050.h  Sensor.cpp  Sensor.h
main/store/: DataStore.cpp  DataStore.h  SPIFFSStore.cpp  SPIFFSStore.h
main/tools/: cvs_file_reader.py  telemetry_reader.py  telemetry_reader2.py
main/utils/: I2CManager.cpp  I2CManager.h  Tools.cpp  Tools.h  constantes.h  sd_card.cpp  sd_card.h
